# factory

./: Cargo.toml
factory-bin/: Cargo.toml
factory-bin/src/: error.rs  main.rs
factory-core/: Cargo.toml
factory-exploration/: Cargo.toml
factory-exploration/src/: main.rs
factory-io/: Cargo.toml
factory-io/src/: domain.rs  error.rs  lib.rs  prelude.rs
factory-lib/: Cargo.toml
factory-lib/src/: data.rs  domain.rs  entities.rs  error.rs  lib.rs  prelude.rs  traits.rs
recipe-lister/: active_mods.json  inserter.json  item.json  recipe.json  technology.json
