[package]
name = "factory-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factory-core = { path = "../factory-core" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
